front end stuff, published but not working yet

--- a/FP_Phase2/Views/Home/Index.cshtml
+++ b/FP_Phase2/Views/Home/Index.cshtml
@@ -1,1 +1,28 @@
-﻿
+﻿<div class="row pt-5">
+    <div class="col-8 mx-5">
+        <div class="row">
+            <div class="fade"></div>
+            <section class="star-wars">
+                <div class="crawl">
+                    <div class="title">
+                        <p>Project IV</p>
+                        <h1>A New API</h1>
+                    </div>
+
+                    <p>A Web API is used for accessing data from multiple platforms.</p>
+                    <p>Over the past few weeks I've created a Financial Portal web page.</p>
+                    <p>The API for the financial portal works the same way as the ASP.NET web page but instead of returning an HTML view, it only sends the data in the form of json or xml.</p>
+                    <br />
+                    <p>This is my web API for my Financial Portal Project...</p>
+
+                </div>
+            </section>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                @*<img class="img-responsive fix center" src="~/Images/xwing.png" style="display: block; margin-left: auto; margin-right: auto;" />*@
+            </div>
+        </div>
+    </div>
+</div>
