--- a/FP_Phase2/Content/Site.css
+++ b/FP_Phase2/Content/Site.css
@@ -1,12 +1,49 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿@import url(https://fonts.googleapis.com/css?family=Audiowide);
+
+.desc {
+    font-size: 0.75em;
+}
+
+#myCanvas {
+    background-color: #101010;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1000;
+    height: inherit;
+    width: inherit;
+}
+
+body {
+    background-color: #101010;
+    color: white;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    /*padding-top: 50px;
+    padding-bottom: 20px;*/
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
+    justify-content: center;
+    align-content: center;
+    text-align: center;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.fix {
+    position: fixed;
+    bottom: 60px;
+    left: 39%;
+}
+
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -15,3 +52,61 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+
+/*starwars text*/
+.fade {
+    position: relative;
+    width: 100%;
+    min-height: 60vh;
+    top: -25px;
+    background-image: linear-gradient(0deg, transparent, black 75%);
+    z-index: 1;
+}
+
+.star-wars {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    height: 800px;
+    color: #feda4a;
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 500%;
+    font-weight: 600;
+    letter-spacing: 6px;
+    line-height: 150%;
+    perspective: 400px;
+    text-align: justify;
+}
+
+.crawl {
+    position: relative;
+    top: 99999px;
+    transform-origin: 70% 100%;
+    animation: crawl 40s linear;
+    animation-iteration-count: infinite;
+}
+
+    .crawl > .title {
+        font-size: 100%;
+        text-align: center;
+    }
+
+        .crawl > .title h1 {
+            margin: 0 0 100px;
+            text-transform: uppercase;
+        }
+
+@keyframes crawl {
+    0% {
+        top: -100px;
+        transform: rotateX(20deg) translateZ(0);
+    }
+
+    100% {
+        top: -6000px;
+        transform: rotateX(25deg) translateZ(-2500px);
+    }
+}
+
