--- a/FP_Phase2/Views/Shared/_Layout.cshtml
+++ b/FP_Phase2/Views/Shared/_Layout.cshtml
@@ -3,41 +3,44 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/png" sizes="16x16" href="~/Images/favicon.png">
     <title>@ViewBag.Title</title>
 
-    <link href="~/Content/customSwagger.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
 </head>
+
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <canvas id="myCanvas"></canvas>
+    <div class="navbar navbar-inverse navbar-fixed-top text-center">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Financial Portal API", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="navbar-header">
+                        <p class="navbar-brand" style="color: #9d9d9d">Financial Portal API</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("Swagger API", "Index", "Swagger", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("API Help", "Index", "Help", new { area = "" }, null)</li>
+                    </ul>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Swagger API", "Index", "Swagger", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API Help", "Index", "Help", new { area = "" }, null)</li>
-                </ul>
-            </div>
+
         </div>
     </div>
-    <div class="container body-content">
+
+    <div class="container body-content pt-5">
         @RenderBody()
-        <hr />
-        <footer>
-            
-        </footer>
     </div>
 
-    <script src="~/Scripts/customSwagger.js"></script>
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/custom.js"></script>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
