--- a/FP_Phase2/Views/Shared/_Layout.cshtml
+++ b/FP_Phase2/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/png" sizes="16x16" href="~/Images/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="~/favicon.ico">
     <title>@ViewBag.Title</title>
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
@@ -27,10 +27,10 @@
                         <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("Swagger API", "Index", "Swagger", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("API Help", "Index", "Help", new { area = "" }, null)</li>
+                        <li><a href="https://khumorchang.azurewebsites.net/">Back to My Portfolio</a></li>
                     </ul>
                 </div>
             </div>
-
         </div>
     </div>
 
