--- a/FP_Phase2/Views/Shared/_Layout.cshtml
+++ b/FP_Phase2/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="pre-scrollable">
     <canvas id="myCanvas"></canvas>
     <div class="navbar navbar-inverse navbar-fixed-top text-center">
         <div class="container">
