--- a/FP_Phase2/Areas/HelpPage/HelpPage.css
+++ b/FP_Phase2/Areas/HelpPage/HelpPage.css
@@ -42,6 +42,7 @@
 }
 
 .help-page-table td {
+    color: white;
     border-bottom: 1px solid #D4D4D4;
     padding: 10px 8px 10px 8px;
     vertical-align: top;
@@ -108,6 +109,7 @@
 
 .help-page h1,
 .help-page .h1 {
+    color: white;
     font-size: 36px;
     line-height: normal;
 }
@@ -119,6 +121,7 @@
 
 .help-page h3,
 .help-page .h3 {
+    color: white;
     font-size: 20px;
 }
 
@@ -129,6 +132,6 @@
 }
 
 .help-page a {
-    color: #0000EE;
+    color: #fff;
     text-decoration: none;
 }
