--- a/FP_Phase2/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/FP_Phase2/Areas/HelpPage/Views/Help/Index.cshtml
@@ -16,7 +16,7 @@
 <header class="help-page">
     <div class="content-wrapper">
         <div class="float-left">
-            <h1>@ViewBag.Title</h1>
+            <h1>Financial Portal Web API - Help</h1>
         </div>
     </div>
 </header>
